# BookMed

./: BookMed.qmlproject  BookMed.qmlproject.qtds  CMakeLists.txt  LICENSE  README.md  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/BookMed/: CMakeLists.txt  qmldir
imports/BookMed/designer/: plugin.metainfo
src/: apigetbenefits.cpp  apigetbenefits.h  apigetproviders.cpp  apigetproviders.h  apigetquery.cpp  apigetquery.h  apigetqueues.cpp  apigetqueues.h  apigettersfactory.cpp  apigettersfactory.h  import_qml_plugins.h  main.cpp
